# simple-chess-rust-slint

./: .gitignore  Cargo.toml  LICENSE  README.md
i18n/: en.yml  es.yml  fr.yml
src/: game.rs  main.rs
ui/: appwindow.slint  chessboard.slint
ui/components/: chessboard.slint  choosepromotionpiece.slint
