[package]
name = "simple-chess"
version = "0.1.0"
authors = ["laurent bernabé <laurent.bernabe@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
current_locale = "0.1.1"
rust-i18n = "2.3.0"
shakmaty = "0.26.0"
slint = "1.3.0"

[build-dependencies]
slint-build = "1.3.0"
